--- a/package.json
+++ b/package.json
@@ -4,18 +4,13 @@
   "description": "TCP chat server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/msukuma/chat-tcp-server.git"
+    "url": "https://github.com/msukuma/chat-tcp-server.git"
   },
-  "keywords": [
-    "chat",
-    "server",
-    "tcp"
-  ],
+  "keywords": ["chat", "server", "tcp", "websocket"],
   "author": "Itenga",
   "license": "MIT",
   "bugs": {
@@ -23,6 +18,7 @@
   },
   "homepage": "https://github.com/msukuma/chat-tcp-server#readme",
   "dependencies": {
+    "http-headers": "^3.0.2",
     "winston": "^3.0.0-rc1"
   }
 }
