--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "type": "git",
     "url": "https://github.com/msukuma/chat-tcp-server.git"
   },
-  "keywords": ["chat", "server", "tcp", "websocket"],
+  "keywords": [
+    "chat",
+    "server",
+    "tcp",
+    "websocket"
+  ],
   "author": "Itenga",
   "license": "MIT",
   "bugs": {
@@ -19,6 +24,7 @@
   "homepage": "https://github.com/msukuma/chat-tcp-server#readme",
   "dependencies": {
     "http-headers": "^3.0.2",
+    "int64-buffer": "^0.1.10",
     "winston": "^3.0.0-rc1"
   }
 }
