session on connection /session/userID

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/msukuma/chat-tcp-server#readme",
   "dependencies": {
     "http-headers": "^3.0.2",
+    "http-headers-validation": "0.0.1",
     "int64-buffer": "^0.1.10",
     "winston": "^3.0.0-rc1"
   }
