--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "http-headers-validation": "0.0.1",
     "int64-buffer": "^0.1.10",
     "winston": "^3.0.0-rc1"
+  },
+  "devDependencies": {
+    "faker": "^4.1.0"
   }
 }
