--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-tcp-server",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "TCP chat server",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "websocket"
   ],
   "author": "Itenga",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/msukuma/chat-tcp-server/issues"
   },
